--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "googleapis": "^140.0.1",
     "ioredis": "^5.4.1",
     "mongodb": "^5.9.2",
+    "node-mailjet": "^6.0.6",
     "pg": "^8.13.0",
     "readline": "^1.3.0",
     "reflect-metadata": "^0.1.14",
@@ -69,6 +70,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
+    "@types/ioredis": "^5.0.0",
     "@types/jest": "29.5.1",
     "@types/node": "18.16.12",
     "@types/nodemailer": "^6.4.15",
