--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node dist/main",
-    "start:dev": "export NODE_ENV=development && npm run migration:run && nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "export NODE_ENV=production && npm run migration:run && node dist/main",
+    "dev": "export NODE_ENV=development && npm run migration:run && nest start --watch",
+    "debug": "nest start --debug --watch",
+    "prod": "export NODE_ENV=production && npm run migration:run && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
