--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,20 @@
+#### when running locally not using docker consider 1, 2 and 3 ####
+
 # PostgreSQL Database Connection
-DB_HOST=localhost
+DB_HOST=postgres  #1- change it to localhost
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 DB_PORT=5432
 DB_DATABASE=restaurant
 
 # Redis Connection
-REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://redis:6379 #2- change it to REDIS_URL=redis://localhost:6379 
 REDIS_DATABASE=restaurant
-REDIS_HOST=localhost
+REDIS_HOST=redis #3- change it to localhost
 REDIS_PORT=6379
+
+# mailjet
+MAILJET_APIKEY=c14d73a0533487b5411033e89aa492d2
+MAILJET_SECRETKEY=c73ad5fd633c233c7158017f84fca351
+MAILJET_FROM_EMAIL=mohamedhanafycivily@gmail.com
+NOTIFICATION_EMAIL=mohamedmagdycivily@gmail.com
